--- a/113306012_lab.html
+++ b/113306012_lab.html
@@ -16,7 +16,7 @@
 			</tr>
 			<tr>
 				<th rowspan = 4>
-				<img src="D:\USER\Desktop\HTML課程\Wikipedia-logo-v2.svg.png" width = "100px" height = "100px"></th>
+				<img src= ".\New_york_times_square-terabass.jpg" width = "500px" height = "500px"></th>
 			</tr>
 			<tr>
 				<td colspan = 2 rowspan = 1 align = "left">
